Tweak intro styling

--- a/index.html
+++ b/index.html
@@ -988,15 +988,19 @@
                                 <p>
                                     <table style="border: none;">
                                         <tr>
-                                            <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank"><img src="img/ChromeWebStore_Badge_v2_206x58.png" /></a></td>
-                                            <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank" style="font-weight: 600;">Install Former2 Helper for Google Chrome</a></td>
+                                            <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank"><img src="img/browser-chrome.svg" /></a></td>
+                                            <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Google Chrome</a></td>
                                         </tr>
                                         <tr>
-                                            <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank"><img src="img/AMO-button_1.png" /></a></td>
-                                            <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank" style="font-weight: 600;">Install Former2 Helper for Mozilla Firefox</a></td>
+                                            <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank"><img src="img/browser-firefox.svg" /></a></td>
+                                            <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Mozilla Firefox</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td><a href="https://microsoftedge.microsoft.com/addons/detail/okkjnfohglnomdbpimkcdkiojbeiedof" target="_blank"><img src="img/browser-edge.svg" /></a></td>
+                                            <td><a href="https://microsoftedge.microsoft.com/addons/detail/okkjnfohglnomdbpimkcdkiojbeiedof" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Microsoft Edge</a></td>
                                         </tr>
                                     </table>
-                                </p><br />
+                                </p>
                                 <p>If you have any questions, bugs or feature requests please <a href="https://github.com/iann0036/former2/issues" target="_blank">raise an issue</a> via GitHub.</p>
                             </div>
                             <div class="col-md-1"></div>
@@ -1026,7 +1030,7 @@
                         <div class="row">
                             <div class="col-md-1"></div>
                             <div class="col-md-6">
-                                <header class="steps-numeric-title">Enter your IAM credentials:</header>
+                                <h5>Enter your IAM credentials:</h5>
                                 <div class="form-group">
                                     <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key"/>
                                 </div>
@@ -1077,7 +1081,7 @@
                         <div class="row">
                             <div class="col-md-1"></div>
                             <div class="col-md-10">
-                                <h4>Parameters</h4>
+                                <h5>Parameters</h5>
                                 <p>You can optionally include your own <a href="https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html" target="_blank">CloudFormation stack parameters</a> by adding them below. If the default value is set, <code>!Ref</code> or <code>!Sub</code> may be used to reference these parameters in the output if the values match.</p>
                                 <br />
                                 <table id="parameter-table" style="display: none;">
