--- a/index.html
+++ b/index.html
@@ -1035,10 +1035,10 @@
                                     <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key"/>
                                 </div>
                                 <div class="form-group">
-                                    <input id="credentials-secretkey" type="text" class="form-control credentials-field" placeholder="Secret Key"/>
+                                    <input id="credentials-secretkey" type="password" class="form-control credentials-field" placeholder="Secret Key"/>
                                 </div>
                                 <div class="form-group">
-                                    <input id="credentials-sessiontoken" type="text" class="form-control credentials-field" placeholder="Session Token (optional)"/>
+                                    <input id="credentials-sessiontoken" type="password" class="form-control credentials-field" placeholder="Session Token (optional)"/>
                                 </div>
                                 <div class="form-group">
                                     <input id="credentials-assumerole" type="text" class="form-control credentials-field" placeholder="Assumed Role ARN (optional)"/>
