Add Milan eu-south-1

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                                         <a class="dropdown-item region-item" data-region="eu-central-1">EU (Frankfurt)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-1">EU (Ireland)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-2">EU (London)</a>
+                                        <a class="dropdown-item region-item" data-region="eu-south-1">EU (Milan)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
                                         <a class="dropdown-item region-item" data-region="me-south-1">Middle East (Bahrain)</a>
