Add CDK Java support

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <script src="lib/codemirror/mode/javascript/javascript.js"></script>
         <script src="lib/codemirror/mode/yaml/yaml.js"></script>
         <script src="lib/codemirror/mode/ruby/ruby.js"></script>
+        <script src="lib/codemirror/mode/clike/clike.js"></script>
     </head>
     <body class="with-side-menu">
 
@@ -412,7 +413,7 @@
                     <li class="red with-sub" data-category="securityidentityandcompliance">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Security-Identity-and-Compliance_light-bg.png" style="width: 16px; height: 16px;" /></i>
-                            <span class="lbl">Security, Identity &amp; Compliance</span>
+                            <span class="lbl">Security, Identity, &amp; Compliance</span>
                         </span>
                         <ul>
                             <li><a href="#section-securityidentityandcompliance-iam"><span class="lbl">IAM</span></a></li>
@@ -825,7 +826,7 @@
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
                                                 <td><img src="img/aws/Security-Identity-and-Compliance_light-bg.png" style="width: 48px; height: 48px;" /></td>
-                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Security, Identity &amp; Compliance</h4></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Security, Identity, &amp; Compliance</h4></td>
                                             </tr>
                                             <tr>
                                                 <td>&nbsp;</td>
