--- a/index.html
+++ b/index.html
@@ -1036,10 +1036,10 @@
                             <div class="col-md-6">
                                 <h5>Enter your IAM credentials:</h5>
                                 <div class="form-group">
-                                    <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key"/>
+                                    <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key ID"/>
                                 </div>
                                 <div class="form-group">
-                                    <input id="credentials-secretkey" type="password" class="form-control credentials-field" placeholder="Secret Key"/>
+                                    <input id="credentials-secretkey" type="password" class="form-control credentials-field" placeholder="Secret Access Key"/>
                                 </div>
                                 <div class="form-group">
                                     <input id="credentials-sessiontoken" type="password" class="form-control credentials-field" placeholder="Session Token (optional)"/>
