--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
                         <ul>
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                             <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
+                            <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="analytics">
@@ -425,6 +426,7 @@
                             <li><a href="#section-securityidentityandcompliance-guardduty"><span class="lbl">GuardDuty</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-inspector"><span class="lbl">Inspector</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-macie"><span class="lbl">Macie</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-singlesignon"><span class="lbl">Single Sign-On</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-certificatemanager"><span class="lbl">Certificate Manager</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-kms"><span class="lbl">KMS</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-cloudhsm"><span class="lbl">CloudHSM</span></a></li>
@@ -803,7 +805,8 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
-                                                    <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a>
+                                                    <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
+                                                    <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -842,6 +845,7 @@
                                                     <a href="#section-securityidentityandcompliance-guardduty" style="font-weight: 600;">GuardDuty</a><br />
                                                     <a href="#section-securityidentityandcompliance-inspector" style="font-weight: 600;">Inspector</a><br />
                                                     <a href="#section-securityidentityandcompliance-macie" style="font-weight: 600;">Macie</a><br />
+                                                    <a href="#section-securityidentityandcompliance-singlesignon" style="font-weight: 600;">Single Sign-On</a><br />
                                                     <a href="#section-securityidentityandcompliance-certificatemanager" style="font-weight: 600;">Certificate Manager</a><br />
                                                     <a href="#section-securityidentityandcompliance-kms" style="font-weight: 600;">KMS</a><br />
                                                     <a href="#section-securityidentityandcompliance-cloudhsm" style="font-weight: 600;">CloudHSM</a><br />
@@ -1476,7 +1480,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="aws-sdk-2.747.0.min.js"></script>
+        <script src="js/aws-sdk-2.750.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1591,6 +1595,8 @@
         <script src="js/services/detective.js"></script>
         <script src="js/services/costexplorer.js"></script>
         <script src="js/services/ec2imagebuilder.js"></script>
+        <script src="js/services/kendra.js"></script>
+        <script src="js/services/singlesignon.js"></script>
         
         <script src="js/app.js"></script>
     </body>
