--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-applicationintegration-stepfunctions"><span class="lbl">Step Functions</span></a></li>
+                            <li><a href="#section-applicationintegration-appflow"><span class="lbl">AppFlow</span></a></li>
                             <li><a href="#section-applicationintegration-eventbridge"><span class="lbl">EventBridge</span></a></li>
                             <li><a href="#section-applicationintegration-amazonmq"><span class="lbl">Amazon MQ</span></a></li>
                             <li><a href="#section-applicationintegration-sns"><span class="lbl">SNS</span></a></li>
@@ -894,6 +895,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-applicationintegration-stepfunctions" style="font-weight: 600;">Step Functions</a><br />
+                                                    <a href="#section-applicationintegration-appflow" style="font-weight: 600;">AppFlow</a><br />
                                                     <a href="#section-applicationintegration-eventbridge" style="font-weight: 600;">EventBridge</a><br />
                                                     <a href="#section-applicationintegration-amazonmq" style="font-weight: 600;">Amazon MQ</a><br />
                                                     <a href="#section-applicationintegration-sns" style="font-weight: 600;">SNS</a><br />
@@ -1480,7 +1482,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.750.0.min.js"></script>
+        <script src="js/aws-sdk-2.756.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1597,6 +1599,7 @@
         <script src="js/services/ec2imagebuilder.js"></script>
         <script src="js/services/kendra.js"></script>
         <script src="js/services/singlesignon.js"></script>
+        <script src="js/services/appflow.js"></script>
         
         <script src="js/app.js"></script>
     </body>
