Add option to ignore CloudWatch Log Streams

--- a/index.html
+++ b/index.html
@@ -1282,6 +1282,15 @@
                                         <option value="diagram">Diagram</option>
                                     </select>
                                 </div>
+                                <br />
+                                <div class="form-group">
+                                    <h5>Irrelevant Resources&nbsp;<span data-tippy-content="Experimental"><i class="fa fa-warning" style="color: #f29824;"></i></span></h5>
+                                    <p>When enabled, this setting will skip resources considered irrelevant (currently only CloudWatch Log Streams):</p>
+                                    <div class="checkbox-toggle">
+                                        <input type="checkbox" id="skipirrelevantresources">
+                                        <label for="skipirrelevantresources">Skip Irrelevant Resources</label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-5">
